--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,9 +1,7 @@
-path: 'C:/Users/Richard/Desktop/Cell-Segmentation-and-Tracking/cyprus-data' # dataset root directory
+path: 'C:/Users/Richard/Desktop/Cell-Segmentation-and-Tracking/merged-dataset' # dataset root directory
 train: images/train # train images
 val: images/val # validation images
 
 names:
-  0: mitotic
-  1: daughter cells
-  2: telophase
-  3: apoptotic
+  0: cell
+  1: division
