--- a/src/config.yaml
+++ b/src/config.yaml
@@ -3,5 +3,7 @@ train: images/train # train images
 val: images/val # validation images
 
 names:
-  0: cell
-  1: division
+  0: mitotic
+  1: daughter cells
+  2: telophase
+  3: apoptotic
